--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
-  "name": "thelia/pay-pal-module",
+  "name": "thelia/paypal-module",
+  "description": "PayPal module for Thelia ecommerce solution ",
   "license": "LGPL-3.0+",
   "type": "thelia-module",
   "require": {
     "thelia/installer": "~1.1",
-    "paypal/rest-api-sdk-php": "1.7.1",
-    "wazaari/monolog-mysql": "1.0.3"
+    "cqfdev/paypal-rest-api-sdk-php": "1.7.4.1",
+    "wazaari/monolog-mysql": "1.0.5"
   },
   "extra": {
     "installer-name": "PayPal"
