--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
   "license": "LGPL-3.0+",
   "type": "thelia-module",
   "require": {
+    "php": ">=8.1",
     "thelia/installer": "~1.1",
     "cqfdev/paypal-rest-api-sdk-php": "1.7.4.1",
     "wazaari/monolog-mysql": "1.0.5"
